--- a/index.html
+++ b/index.html
@@ -176,6 +176,28 @@
       </dl>
     </section>
 
+    <section class="grid-section galeria" data-anime="scroll">
+      <ul class="custom-controls">
+        <li><img src="./img/slide/foto1-thumb.jpg" srcset=""></li>
+        <li><img src="./img/slide/foto2-thumb.jpg" alt="" srcset=""></li>
+        <li><img src="./img/slide/foto3-thumb.jpg" alt="" srcset=""></li>
+        <li><img src="./img/slide/foto4-thumb.jpg" alt="" srcset=""></li>
+        <li><img src="./img/slide/foto5-thumb.jpg" alt="" srcset=""></li>
+        <li><img src="./img/slide/foto6-thumb.jpg" alt="" srcset=""></li>
+      </ul>
+
+      <div class="slide-wrapper">
+        <ul class="slide">
+          <li><img src="img/slide/foto1.jpg" alt=""></li>
+          <li><img src="img/slide/foto2.jpg" alt=""></li>
+          <li><img src="img/slide/foto3.jpg" alt=""></li>
+          <li><img src="img/slide/foto4.jpg" alt=""></li>
+          <li><img src="img/slide/foto5.jpg" alt=""></li>
+          <li><img src="img/slide/foto6.jpg" alt=""></li>
+        </ul>
+      </div>
+    </section>
+
     <section class="grid-section numeros" data-anime="scroll">
       <h1 class="titulo">Números</h1>
       <div class="numeros-grid">
@@ -213,6 +235,7 @@
         <button type="submit">Entrar</button>
       </form>
     </div>
+    <h1>errou</h1>
   </section>
 
   <script src="./main.js/main.js"></script>
